// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleSelect [common] example testing should match snapshot(s) for 01.basic 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption0"
  >
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption1"
  >
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption2"
  >
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 02.named-options 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption0"
    name="red"
  >
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption1"
    name="green"
  >
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption2"
    name="blue"
  >
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 03.disabled-options 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption0"
  >
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption1"
  >
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption2"
  >
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 04.disabled-select 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={true}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control lucid-SingleSelect-Control-is-disabled"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption0"
  >
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption1"
  >
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption2"
  >
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 05.grouped-options 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.OptionGroup
    isHidden={false}
    key="SingleSelectOptionGroup0"
  >
    Screen
    <SingleSelect.Option>
      Red
    </SingleSelect.Option>
    <SingleSelect.Option>
      Green
    </SingleSelect.Option>
    <SingleSelect.Option>
      Blue
    </SingleSelect.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SingleSelectOption0"
    >
      Red
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SingleSelectOption1"
    >
      Green
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SingleSelectOption2"
    >
      Blue
    </DropMenu.Option>
  </DropMenu.OptionGroup>
  <DropMenu.OptionGroup
    isHidden={false}
    key="SingleSelectOptionGroup1"
  >
    Print
    <SingleSelect.Option>
      Cyan
    </SingleSelect.Option>
    <SingleSelect.Option>
      Yellow
    </SingleSelect.Option>
    <SingleSelect.Option>
      Magenta
    </SingleSelect.Option>
    <SingleSelect.Option>
      Black
    </SingleSelect.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SingleSelectOption3"
    >
      Cyan
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SingleSelectOption4"
    >
      Yellow
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SingleSelectOption5"
    >
      Magenta
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SingleSelectOption6"
    >
      Black
    </DropMenu.Option>
  </DropMenu.OptionGroup>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 06.no-unselect 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select Foo
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption0"
  >
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption1"
  >
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption2"
  >
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 07.max-menu-height 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "12em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption0"
  >
    Aliceblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption1"
  >
    Antiquewhite
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption2"
  >
    Aqua
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption3"
  >
    Aquamarine
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption4"
  >
    Azure
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption5"
  >
    Beige
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption6"
  >
    Bisque
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption7"
  >
    Black
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption8"
  >
    Blanchedalmond
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption9"
  >
    Blue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption10"
  >
    Blueviolet
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption11"
  >
    Brown
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption12"
  >
    Burlywood
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption13"
  >
    Cadetblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption14"
  >
    Chartreuse
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption15"
  >
    Chocolate
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption16"
  >
    Coral
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption17"
  >
    Cornflowerblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption18"
  >
    Cornsilk
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption19"
  >
    Crimson
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption20"
  >
    Cyan
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption21"
  >
    Darkblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption22"
  >
    Darkcyan
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption23"
  >
    Darkgoldenrod
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption24"
  >
    Darkgray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption25"
  >
    Darkgreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption26"
  >
    Darkkhaki
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption27"
  >
    Darkmagenta
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption28"
  >
    Darkolivegreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption29"
  >
    Darkorange
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption30"
  >
    Darkorchid
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption31"
  >
    Darkred
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption32"
  >
    Darksalmon
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption33"
  >
    Darkseagreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption34"
  >
    Darkslateblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption35"
  >
    Darkslategray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption36"
  >
    Darkturquoise
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption37"
  >
    Darkviolet
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption38"
  >
    Deeppink
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption39"
  >
    Deepskyblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption40"
  >
    Dimgray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption41"
  >
    Dodgerblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption42"
  >
    Firebrick
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption43"
  >
    Floralwhite
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption44"
  >
    Forestgreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption45"
  >
    Fuchsia
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption46"
  >
    Gainsboro
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption47"
  >
    Ghostwhite
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption48"
  >
    Gold
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption49"
  >
    Goldenrod
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption50"
  >
    Gray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption51"
  >
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption52"
  >
    Greenyellow
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption53"
  >
    Honeydew
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption54"
  >
    Hotpink
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption55"
  >
    Indianred
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption56"
  >
    Indigo
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption57"
  >
    Ivory
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption58"
  >
    Khaki
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption59"
  >
    Lavender
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption60"
  >
    Lavenderblush
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption61"
  >
    Lawngreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption62"
  >
    Lemonchiffon
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption63"
  >
    Lightblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption64"
  >
    Lightcoral
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption65"
  >
    Lightcyan
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption66"
  >
    Lightgoldenrodyellow
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption67"
  >
    Lightgray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption68"
  >
    Lightgreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption69"
  >
    Lightpink
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption70"
  >
    Lightsalmon
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption71"
  >
    Lightseagreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption72"
  >
    Lightskyblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption73"
  >
    Lightslategray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption74"
  >
    Lightsteelblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption75"
  >
    Lightyellow
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption76"
  >
    Lime
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption77"
  >
    Limegreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption78"
  >
    Linen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption79"
  >
    Magenta
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption80"
  >
    Maroon
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption81"
  >
    Medium aquamarine
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption82"
  >
    Mediumblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption83"
  >
    Mediumorchid
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption84"
  >
    Mediumpurple
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption85"
  >
    Mediumseagreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption86"
  >
    Mediumslateblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption87"
  >
    Mediumspringgreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption88"
  >
    Mediumturquoise
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption89"
  >
    Mediumvioletred
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption90"
  >
    Midnightblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption91"
  >
    Mintcream
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption92"
  >
    Mistyrose
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption93"
  >
    Moccasin
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption94"
  >
    Navajowhite
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption95"
  >
    Navy
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption96"
  >
    Oldlace
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption97"
  >
    Olive
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption98"
  >
    Olivedrab
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption99"
  >
    Orange
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption100"
  >
    Orangered
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption101"
  >
    Orchid
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption102"
  >
    Palegoldenrod
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption103"
  >
    Palegreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption104"
  >
    Paleturquoise
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption105"
  >
    Palevioletred
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption106"
  >
    Papayawhip
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption107"
  >
    Peachpuff
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption108"
  >
    Peru
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption109"
  >
    Pink
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption110"
  >
    Plum
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption111"
  >
    Powderblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption112"
  >
    Purple
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption113"
  >
    Rebeccapurple
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption114"
  >
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption115"
  >
    Rosybrown
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption116"
  >
    Royalblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption117"
  >
    Saddlebrown
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption118"
  >
    Salmon
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption119"
  >
    Sandybrown
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption120"
  >
    Seagreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption121"
  >
    Seashell
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption122"
  >
    Sienna
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption123"
  >
    Silver
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption124"
  >
    Skyblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption125"
  >
    Slateblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption126"
  >
    Slategray
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption127"
  >
    Snow
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption128"
  >
    Springgreen
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption129"
  >
    Steelblue
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption130"
  >
    Tan
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption131"
  >
    Teal
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption132"
  >
    Thistle
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption133"
  >
    Tomato
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption134"
  >
    Turquoise
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption135"
  >
    Violet
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption136"
  >
    Wheat
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption137"
  >
    White
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption138"
  >
    Whitesmoke
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption139"
  >
    Yellow
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption140"
  >
    Yellowgreen
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 08.rich-content 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        <PlusIcon
          isBadge={true}
          style={
            Object {
              "backgroundColor": "gray",
              "marginRight": 4,
            }
          }
        />
         
        Add Color
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption0"
  >
    <PlusIcon
      isBadge={true}
      style={
        Object {
          "backgroundColor": "red",
          "marginRight": 4,
        }
      }
    />
     
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption1"
  >
    <PlusIcon
      isBadge={true}
      style={
        Object {
          "backgroundColor": "green",
          "marginRight": 4,
        }
      }
    />
     
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption2"
  >
    <PlusIcon
      isBadge={true}
      style={
        Object {
          "backgroundColor": "blue",
          "marginRight": 4,
        }
      }
    />
     
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 09.no-selection-highlighting 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select Foo
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption0"
  >
    Red
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption1"
  >
    Green
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption2"
  >
    Blue
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 10.array-options 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={Array []}
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Select a number
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption0"
  >
    1
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption1"
  >
    2
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption2"
  >
    3
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect [common] example testing should match snapshot(s) for 11.stateless 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={Object {}}
  focusedIndex={2}
  isDisabled={false}
  isExpanded={true}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={
    Array [
      1,
    ]
  }
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control lucid-SingleSelect-Control-is-highlighted lucid-SingleSelect-Control-is-selected lucid-SingleSelect-Control-is-expanded"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        Green
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.NullOption>
    Select Color
  </DropMenu.NullOption>
  <DropMenu.OptionGroup
    isHidden={false}
    key="SingleSelectOptionGroup0"
  >
    Preferred
    <SingleSelect.Option>
      Red
    </SingleSelect.Option>
    <SingleSelect.Option>
      Green
    </SingleSelect.Option>
    <SingleSelect.Option>
      Blue
    </SingleSelect.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SingleSelectOption0"
    >
      Red
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SingleSelectOption1"
    >
      Green
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SingleSelectOption2"
    >
      Blue
    </DropMenu.Option>
  </DropMenu.OptionGroup>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption3"
  >
    Orange
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption4"
  >
    Violet
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={true}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption5"
  >
    Brown
  </DropMenu.Option>
</DropMenu>
`;

exports[`SingleSelect child elements Option should render Option.Selected in the Placeholder area 1`] = `
<DropMenu
  ContextMenu={
    Object {
      "alignment": "start",
      "direction": "down",
      "directonOffset": 0,
      "getAlignmentOffset": [Function],
      "isExpanded": true,
      "minWidthOffset": 0,
      "onClickOut": null,
      "portalId": null,
    }
  }
  alignment="start"
  className="lucid-SingleSelect"
  direction="down"
  flyOutStyle={
    Object {
      "maxHeight": "18em",
    }
  }
  focusedIndex={null}
  isDisabled={false}
  isExpanded={false}
  onCollapse={[Function]}
  onExpand={[Function]}
  onFocusNext={[Function]}
  onFocusOption={[Function]}
  onFocusPrev={[Function]}
  onSelect={[Function]}
  selectedIndices={
    Array [
      1,
    ]
  }
>
  <DropMenu.Control>
    <div
      className="lucid-SingleSelect-Control lucid-SingleSelect-Control-is-highlighted lucid-SingleSelect-Control-is-selected"
      tabIndex={0}
    >
      <span
        className="lucid-SingleSelect-Control-content"
      >
        option b
      </span>
      <CaretIcon
        direction="down"
        size={8}
        viewBox="0 3 16 8"
      />
    </div>
  </DropMenu.Control>
  <DropMenu.NullOption>
    select one
  </DropMenu.NullOption>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption0"
    name="OptionA"
  >
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "width": 100,
          }
        }
      >
        id
      </div>
      <div>
        option a
      </div>
    </div>
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption1"
    name="OptionB"
  >
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "width": 100,
          }
        }
      >
        id
      </div>
      <div>
        option b
      </div>
    </div>
  </DropMenu.Option>
  <DropMenu.Option
    isDisabled={false}
    isHidden={false}
    isWrapped={true}
    key="SingleSelectOption2"
    name="OptionC"
  >
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "width": 100,
          }
        }
      >
        id
      </div>
      <div>
        option c
      </div>
    </div>
  </DropMenu.Option>
</DropMenu>
`;
